--- a/homeworks/week7/Challenge/W7Challenge.html
+++ b/homeworks/week7/Challenge/W7Challenge.html
@@ -11,18 +11,18 @@
   
     <div class="carousel">
 
-      <div class="sildeShow silde1 hide">
+      <div class="silde-Show silde1 hide">
         <div class="pic">First Silde</div>
         <div class="title">滑動效果未完成</div>
       </div>
 
       
-      <div class="sildeShow silde2 ">
+      <div class="silde-Show silde2 ">
         <div class="pic">Second Silde</div>
         <div class="title">滑動效果未完成</div>
       </div>
 
-      <div class="sildeShow silde3 hide">
+      <div class="silde-Show silde3 hide">
         <div class="pic">Third Silde</div>
         <div class="title">滑動效果未完成</div>
       </div>
