--- a/homeworks/week7/hw1/index.html
+++ b/homeworks/week7/hw1/index.html
@@ -36,7 +36,7 @@
 
             <div class="section-input hide">
                 <label class="input-title" for="phone-number">電話號碼 <span>*</span></label>
-                <input type="text" id="phone-number" name="phone" placeholder="給虧嗎">
+                <input type="number" id="phone-number" name="phone" placeholder="給虧嗎">
                 <p class="notice notice-phone">不留電話怎麼情話纏綿</p>
             </div>
 
