--- a/homeworks/week8/hw2/index.html
+++ b/homeworks/week8/hw2/index.html
@@ -32,11 +32,8 @@
       <div class="description">Top 20 popular live streams sorted by current viewers</div>
     </div>
 
-    <div class="section-block">
+    <div class="section-block"></div>
 
-    </div>
-
-    <button></button>  
   </main>
 
   <footer>
